# super-whisper-linux

./: .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix
scripts/: trigger.sh
src/: app.rs  error.rs  lib.rs  main.rs
src/audio/: buffer.rs  capture.rs  mod.rs
src/clipboard/: mod.rs  wayland.rs
src/config/: mod.rs  schema.rs
src/ipc/: mod.rs  socket.rs
src/stt/: mod.rs  provider.rs
src/stt/cloud/: deepgram.rs  groq.rs  mod.rs  openai.rs
src/stt/local/: mod.rs  whisper.rs
src/tray/: mod.rs  sni.rs
systemd/: super-whisper.service
