[package]
name = "super-whisper-linux"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "AI-powered voice to text for Linux"
license = "MIT"
repository = "https://github.com/facundo/super-whisper-linux"
keywords = ["voice", "speech-to-text", "whisper", "linux", "wayland"]
categories = ["multimedia::audio", "accessibility"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "net", "sync", "signal", "process", "time", "fs"] }

# Audio capture
cpal = "0.15"
hound = "3.5"

# Sample rate conversion
rubato = "0.15"

# Local STT (whisper.cpp)
# Note: ROCm/hipblas for AMD GPU requires complex setup and RDNA 4 support is experimental
# CPU is fast enough on modern Ryzen CPUs
whisper-rs = "0.15"

# HTTP client for cloud APIs
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Clipboard
arboard = "3"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Base64 encoding for API requests
base64 = "0.22"

# System tray (StatusNotifierItem for Linux/Wayland)
ksni = "0.2"

[features]
default = ["local-whisper", "cloud-openai", "cloud-groq", "cloud-deepgram"]
local-whisper = []
cloud-openai = []
cloud-groq = []
cloud-deepgram = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
